mining twitter python class

--- a/Chapter 1 - Mining Twitter.ipynb
+++ b/Chapter 1 - Mining Twitter.ipynb
@@ -1,5 +1,4 @@
-bplist00—_WebMainResource’	
-_WebResourceData_WebResourceMIMEType_WebResourceTextEncodingName_WebResourceFrameName^WebResourceURLOJÉ<html><head></head><body><pre style="word-wrap: break-word; white-space: pre-wrap;">{
+{
  "metadata": {
   "name": ""
  },
@@ -33,7 +32,7 @@ bplist00—_WebMainResource’
       "\n",
       "Twitter implements OAuth 1.0A as its standard authentication mechanism, and in order to use it to make requests to Twitter's API, you'll need to go to https://dev.twitter.com/apps and create a sample application. There are four primary identifiers you'll need to note for an OAuth 1.0A workflow: consumer key, consumer secret, access token, and access token secret. Note that you will need an ordinary Twitter account in order to login, create an app, and get these credentials.\n",
       "\n",
-      "&lt;img src=\"files/resources/ch01-twitter/images/Twitter-AppCredentials.png\" width=\"600px\"&gt;"
+      "<img src=\"files/resources/ch01-twitter/images/Twitter-AppCredentials.png\" width=\"600px\">"
      ]
     },
     {
@@ -209,8 +208,8 @@ bplist00—_WebMainResource’
       "        break\n",
       "        \n",
       "    # Create a dictionary from next_results, which has the following form:\n",
-      "    # ?max_id=313519052523986943&amp;q=NCAA&amp;include_entities=1\n",
-      "    kwargs = dict([ kv.split('=') for kv in next_results[1:].split(\"&amp;\") ])\n",
+      "    # ?max_id=313519052523986943&q=NCAA&include_entities=1\n",
+      "    kwargs = dict([ kv.split('=') for kv in next_results[1:].split(\"&\") ])\n",
       "    \n",
       "    search_results = twitter_api.search.tweets(**kwargs)\n",
       "    statuses += search_results['statuses']\n",
@@ -554,4 +553,3 @@ bplist00—_WebMainResource’
   }
  ]
 }
-</pre></body></html>Ztext/plainUUTF-8P_Ühttps://raw.githubusercontent.com/ptwobrussell/Mining-the-Social-Web-2nd-Edition/master/ipynb/Chapter%201%20-%20Mining%20Twitter.ipynb    ( : P n Ö îKK&K,K-                           K∂
